--- a/configs/infer/titok_b64.yaml
+++ b/configs/infer/titok_b64.yaml
@@ -16,6 +16,11 @@ model:
         num_latent_tokens: 64
         finetune_decoder: True
     
+    reconstruction_regularization: 
+        name: matryoshka
+        mask_ratio_method: hierarchical
+        max_mask_rate: 0.75
+    
     generator:
         model_type: "ViT"
         hidden_size: 768
