--- a/configs/training/stage1/titok_b64_matryoshka.yaml
+++ b/configs/training/stage1/titok_b64_matryoshka.yaml
@@ -36,8 +36,8 @@ losses:
 
 dataset:
     params:
-        train_shards_path_or_url: "/mnt/rdata8/imagenet_wds/imagenet-train-{000000..000252}.tar"
-        eval_shards_path_or_url: "/mnt/rdata8/imagenet_wds/imagenet-val-{000000..000009}.tar"
+        train_shards_path_or_url: "datasets/imagenet-train-{000000..000252}.tar"
+        eval_shards_path_or_url: "datasets/imagenet-val-{000000..000009}.tar"
         num_workers_per_gpu: 12
     preprocessing:
         resize_shorter_edge: 256
