--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@ __pycache__/
 *.pyc
 maskgit-vqgan-imagenet-f16-256.bin
 titok_b64_stage1_run1
+deprecated_titok_b64_stage1_run1
+titok_s128_matryoshka_annealing_stage1_run1
 stage1_dry_run
 wandb/
+.cache/
