--- a/configs/training/stage1/titok_l128_4096_12.yaml
+++ b/configs/training/stage1/titok_l128_4096_12.yaml
@@ -1,13 +1,13 @@
 experiment:
-    project: "titok_b_64_stage1"
-    name: "titok_b_64_stage1_run1"
-    output_dir: "titok_b_64_stage1_run1"
+    project: "titok_l_128_4096_12_stage1"
+    name: "titok_l_128_4096_12_stage1_run1"
+    output_dir: "titok_l_128_4096_12_stage1_run1"
     max_train_examples: 1_281_167
-    save_every: 1
-    eval_every: 1
-    generate_every: 1
-    log_every: 1
-    log_grad_norm_every: 1
+    save_every: 50_000
+    eval_every: 50_000
+    generate_every: 5_000
+    log_every: 50
+    log_grad_norm_every: 1_000
     resume: True
     init_weight: ""
 
@@ -19,32 +19,27 @@ model:
         use_l2_norm: True
         commitment_cost: 0.25
         # vit arch
-        vit_enc_model_size: "base"
-        vit_dec_model_size: "base"
+        vit_enc_model_size: "large"
+        vit_dec_model_size: "large"
         vit_enc_patch_size: 16
         vit_dec_patch_size: 16
-        num_latent_tokens: 64
+        num_latent_tokens: 128
         finetune_decoder: False
         pretrained_tokenizer_weight: "maskgit-vqgan-imagenet-f16-256.bin"
-    reconstruction_regularization: 
-        name: matryoshka
-        mask_ratio_method: hierarchical
-        max_mask_rate: 0.75
-
+    
 losses:
     quantizer_weight: 1.0
 
 dataset:
     params:
-        train_shards_path_or_url: "/mnt/rdata8/imagenet_wds/imagenet-train-{000000..000252}.tar"
-        eval_shards_path_or_url: "/mnt/rdata8/imagenet_wds/imagenet-val-{000000..000009}.tar"
+        train_shards_path_or_url: "imagenet_sharded/train/imagenet-train-{0000..0252}.tar"
+        eval_shards_path_or_url: "imagenet_sharded/val/imagenet-val-{0000..0009}.tar"
         num_workers_per_gpu: 12
     preprocessing:
         resize_shorter_edge: 256
         crop_size: 256
         random_crop: True
         random_flip: True
-
 
 optimizer:
     name: adamw 
@@ -53,6 +48,7 @@ optimizer:
         beta1: 0.9
         beta2: 0.99
         weight_decay: 1e-4
+        epsilon: 1e-8
 
 lr_scheduler:
     scheduler: "cosine"
@@ -63,12 +59,11 @@ lr_scheduler:
 
 training:
     gradient_accumulation_steps: 1
-    per_gpu_batch_size: 32
     mixed_precision: "fp16"
     enable_tf32: True
     enable_wandb: True
     use_ema: True
     seed: 42
-    max_train_steps: 10
+    max_train_steps: 1_000_000 # batch size 32
     num_generated_images: 2
     max_grad_norm: 1.0
