--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ titok_b64_stage1_run1
 deprecated_titok_b64_stage1_run1
 titok_s128_matryoshka_annealing_stage1_run1
 stage1_dry_run
+dry_run_stage1_run1
 wandb/
 .cache/
 slurm*
