--- a/configs/training/stage1/dry_run.yaml
+++ b/configs/training/stage1/dry_run.yaml
@@ -1,7 +1,7 @@
 experiment:
-    project: "titok_b_64_stage1"
-    name: "titok_b_64_stage1_run1"
-    output_dir: "titok_b_64_stage1_run1"
+    project: "titok_xl_64_stage1"
+    name: "titok_xl_64_stage1_run1"
+    output_dir: "titok_xl_64_stage1_run1"
     max_train_examples: 1_281_167
     save_every: 1
     eval_every: 1
@@ -19,11 +19,11 @@ model:
         use_l2_norm: True
         commitment_cost: 0.25
         # vit arch
-        vit_enc_model_size: "base"
-        vit_dec_model_size: "base"
+        vit_enc_model_size: "large"
+        vit_dec_model_size: "large"
         vit_enc_patch_size: 16
         vit_dec_patch_size: 16
-        num_latent_tokens: 64
+        num_latent_tokens: 512
         finetune_decoder: False
         pretrained_tokenizer_weight: "maskgit-vqgan-imagenet-f16-256.bin"
     reconstruction_regularization: 
