--- a/configs/training/stage1/dry_run.yaml
+++ b/configs/training/stage1/dry_run.yaml
@@ -1,7 +1,7 @@
 experiment:
-    project: "titok_xl_64_stage1"
-    name: "titok_xl_64_stage1_run1"
-    output_dir: "titok_xl_64_stage1_run1"
+    project: "dry_run_stage1"
+    name: "dry_run_stage1_run1"
+    output_dir: "dry_run_stage1_run1"
     max_train_examples: 1_281_167
     save_every: 1
     eval_every: 1
