fix bugs of baseline eval with non-zero mask rate

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 __pycache__/
 *.pyc
 maskgit-vqgan-imagenet-f16-256.bin
-titok_b64_stage1_run1
-deprecated_titok_b64_stage1_run1
-titok_s128_matryoshka_annealing_stage1_run1
 stage1_dry_run
-dry_run_stage1_run1
-titok_b64_4096_12_stage1_run1
+*run1/
 wandb/
 .cache/
+logs/
 slurm*
 output*
 results*
